[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "blind-QSO-challenge"
description = 'QSO reconstruction info'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Brad Greig", email = "brad.s.greig@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/BradGreig/blind-QSO-challenge#readme"
Issues = "https://github.com/BradGreig/blind-QSO-challenge/issues"
Source = "https://github.com/BradGreig/blind-QSO-challenge"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "blind_QSO_challenge/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.3.9"
]
scripts.serve = "mkdocs serve"